--- a/src/App.css
+++ b/src/App.css
@@ -215,12 +215,20 @@ input:checked + label{
 
 @media screen and (min-width:600px) {
     .image__modal{
+        max-width: 400px;
+    }
+    .image__modal3{
+        max-width: 215px;
+    } 
+}
+
+@media screen and (min-width:900px) {
+    .image__modal{
         max-width: 600px;
     }
     .image__modal3{
         max-width: 300px;
-    }
-    
+    } 
 }
 
 
